# TenderRag

./: .gitignore  README.md
TenderRag/: .dockerignore  .explame.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
TenderRag/app/: config.py  main.py
TenderRag/app/agents/: graph.py  nodes.py  prompts.py
TenderRag/app/api/: auth.py  chat.py  data.py  documents.py  endpoints.py  index.py
TenderRag/app/auth/: dependencies.py  service.py
TenderRag/app/chat/: session.py
TenderRag/app/data/: repository.py
TenderRag/app/db/: database.py  init_db.py  models.py
TenderRag/app/file/: chunker.py  minio_client.py  parser.py
TenderRag/app/frontend/: gradio_app.py
TenderRag/app/intent/: base.py  bert_classifier.py  jieba_classifier.py  llm_classifier.py  pipeline.py
TenderRag/app/memory/: store.py
TenderRag/app/models/: llm.py
TenderRag/app/rag/: bidding.py  fusion.py  hybrid.py  indexing.py  legal.py  milvus.py  product.py  tender.py
TenderRag/app/schemas/: auth.py  chat.py  document.py  index.py
TenderRag/app/task/: arq_config.py  jobs.py  worker.py
TenderRag/app/utils/: __init__.py  db_util.py  legal_document_util.py  logger.py  pdf_load_util.py
TenderRag/evaluation/embedding/: __init__.py  embedding_eval.py  embedding_llamaindex_hybrid_eval.py  embedding_milvus_legal_eval.py  embedding_milvus_product_eval.py  embedding_milvus_tender_eval.py  rrf_grid_search.py  rrf_grid_search_result.json
TenderRag/scripts/: check_embedding_dim.py  download_model.py  export_legal_nodes_for_qa.py  generate_legal_qa.py  vector_index_legal.py  vector_index_product.py  vector_index_tender.py
(+27 files in other folders)
