[project]
name = "tenderrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.135.2",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "llama-index-embeddings-dashscope>=0.5.0",
    "llama-index-llms-dashscope>=0.6.0",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "llama-index-core>=0.14.19",
    "gradio>=5.0",
    "llama-index-readers-file>=0.6.0",
    "pandas>=2.3.3",
    "llama-index-embeddings-huggingface>=0.7.0",
    "ragas>=0.4.3",
    "pymilvus>=2.6.12",
    "pymupdf>=1.27.2.3",
    "jieba>=0.42.1",
    "llama-index-vector-stores-milvus>=1.1.0",
]
