[project]
name = "tenderrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.135.2",
    "langgraph>=1.1.3",
    "llama-index-core>=0.14.19",
    "llama-index-vector-stores-milvus>=1.1.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "pymysql>=1.1.2",
    "pandas>=2.3.3",
    "pymupdf>=1.27.2.3",
    "jieba>=0.42.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncmy>=0.2.9",
    "dashscope>=1.0.0",
    "redis>=5.0.0",
    "arq>=0.26.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
